# RHoiScribe

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release-builds.yml
docs/: README.ja.md  README.ru.md  README.zh-CN.md  client-setup.ja.md  client-setup.md  client-setup.ru.md  client-setup.zh-CN.md  features.ja.md  features.md  features.ru.md  features.zh-CN.md
knowledge/hoi4/: catalog.json
resources/knowledge/hoi4/: catalog.json  latest-update.md
resources/knowledge/hoi4/ai/: ai_strategy.toml
resources/knowledge/hoi4/bookmarks/: start_dates.toml
resources/knowledge/hoi4/buildings/: resources.toml
resources/knowledge/hoi4/characters/: leaders_advisors.toml  traits.toml
resources/knowledge/hoi4/countries/: cosmetic_tags.toml  country_tags.toml
resources/knowledge/hoi4/debug/: common_errors.toml
resources/knowledge/hoi4/decision/: basic_category.toml  mission_vs_decision_blocks.toml  missions_timed.toml
resources/knowledge/hoi4/defines/: game_constants.toml
resources/knowledge/hoi4/diplomacy/: opinion_autonomy.toml
resources/knowledge/hoi4/equipment/: archetypes.toml
resources/knowledge/hoi4/events/: chains.toml  country_event.toml  (+1 more)
resources/skill/: SKILL.md
src/: cli.rs  lib.rs  main.rs  server.rs  skill.rs
src/cwt/: hoi4_config.rs  mod.rs  rules.rs  service.rs  workspace.rs
src/hoi4/: mod.rs
src/prompts/: mod.rs
src/resources/: cwt.rs  knowledge.rs  mod.rs
src/state/: legacy.rs  path.rs  store.rs
src/tools/: cwt_common.rs  cwt_completion.rs  cwt_diagnostics.rs  cwt_file_validation.rs  cwt_indexing.rs  cwt_intelligence.rs  cwt_localisation.rs  cwt_profiles.rs  cwt_project_validation.rs  environment.rs  error_log.rs  gui_gfx_asset.rs  gui_gfx_asset_render.rs  gui_gfx_asset_tests.rs  hoi4_keys.rs  mod.rs  mod_skeleton.rs  paradox_lexer.rs  preferences.rs  project_files.rs  project_index.rs  project_index_scan.rs  project_index_tests.rs  project_repair.rs  project_repair_media.rs  project_repair_tests.rs  project_validation.rs  project_validation_localisation.rs  project_validation_tests.rs  rnmdb_store.rs  script_edit.rs  tool_logs.rs  unique_scan.rs
tests/: knowledge_catalog.rs  prompt_catalog.rs  server_contract.rs
(+49 files in other folders)
