[package]
name = "rhoiscribe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
